# hector_spot_ros

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  wait_for_roscore.sh
hector_spot_description/: 50.export.hector_spot_description.bash.em  CMakeLists.txt  LICENSE  package.xml
hector_spot_description/launch/: load_description.launch  xacrodisplay_spot.launch
hector_spot_description/rviz/: xacrodisplay.rviz
hector_spot_description/urdf/: spot.urdf.xacro  spot_base.urdf.xacro  spot_cam_payload.urdf.xacro  spot_cam_payload.xacro  spot_edge_cpu_payload.urdf.xacro  spot_leg.urdf.xacro  spot_lidar_payload.urdf.xacro  spot_macro.urdf.xacro  spot_ports_payload.urdf.xacro
hector_spot_ros/: CMakeLists.txt  package.xml  setup.py
hector_spot_ros/config/: joy_config.yaml  spot-credentials-example.yaml  spot.yaml
hector_spot_ros/launch/: joy.launch  mission_recorder_demo.launch  spot.launch  spot_driver.launch  tf.launch
hector_spot_ros/scripts/: convert_image_encoding.py  follow_path_test.py  mission_recorder_node.py  spot_ros_interface_node.py
hector_spot_ros/src/hector_spot_ros/: camera_interface.py  cv_bridge.py  graph_nav_interface.py  movement_interface.py  periodic_tasks.py  spot_driver.py  spot_ros_interface.py  state_interface.py
hector_spot_ros/src/hector_spot_ros/utils/: proto_conversions.py  utils.py  visualization.py
hector_spot_ros_msgs/: CMakeLists.txt  package.xml
hector_spot_ros_msgs/action/: ExecuteMission.action  NavigateToWaypoint.action
hector_spot_ros_msgs/msg/: BodyExternalForceParams.msg  MobilityParams.msg  ObstacleParams.msg  TerrainParams.msg
hector_spot_ros_msgs/srv/: CreateGraphWaypoint.srv  DownloadGraph.srv  SetLocalization.srv  SetMobilityParams.srv  UploadGraph.srv
