<?xml version="1.0"?>
<package format="2">
  <name>hector_spot_ros_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for hector_spot_ros</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>

  <license>MIT</license>

  <author email="oehler@sim.tu-darmstadt.de">Martin Oehler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export>
  </export>
</package>
